--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,45 @@ sudo: false
 
 env:
   global:
-    - BYOND_MAJOR="512"
-    - BYOND_MINOR="1463"
+    - BYOND_MAJOR=512
+    - BYOND_MINOR=1463
 
 cache:
   directories:
     - $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}
 
-addons:
-  apt:
-    packages:
-      - libc6-i386
-      - libgcc1:i386
-      - libstdc++6:i386
-      - python3.5
-
-before_script:
+before_install:
   - chmod +x -R scripts/
   - chmod +x test/run-test.sh
-  - ./scripts/install-byond.sh
-  - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
 
 script:
   - test/run-test.sh
+
+matrix:
+  include:
+    - name: "Unit Tests"
+      env: TEST=UNIT
+      install:
+        - ./scripts/install-byond.sh
+        - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
+      addons:
+        apt:
+          packages:
+            - libstdc++6:i386
+
+    - name: "Compile Everything"
+      env: TEST=COMPILE
+      install:
+        - ./scripts/install-byond.sh
+        - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
+      addons:
+        apt:
+          packages:
+            - libstdc++6:i386
+
+    - name: "Code and Map Linter"
+      env: TEST=LINTING
+      addons:
+        apt:
+          packages:
+            - python3.5
