--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
 matrix:
   include:
     - name: "DreamChecker"
+      env: SPACEMAN_DMM_VERSION=suite-1.1
       install:
         - ./scripts/install-spaceman-dmm.sh dreamchecker
       script:
