--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
   include:
     - name: "DreamChecker"
       env: SPACEMAN_DMM_VERSION=suite-1.1
+      cache:
+        directories: $HOME/spaceman_dmm/$SPACEMAN_DMM_VERSION
       install:
         - ./scripts/install-spaceman-dmm.sh dreamchecker
       script:
